# Neutrino

./: .ftpconfig  .gitignore  CMakeLists.txt  README.md  Readme.txt  compiling_error.txt  configure_linux  configure_mac  uncrustify.cfg
Code/: CMakeLists.txt  CMakeSettings.json  configure  configure_linux  configure_mac  configure_windows.bat
Code/include/: algebraic_topology.hpp  baseline.hpp  bond.hpp  color4.hpp  context.hpp  data.hpp  data_classes.hpp  data_structs.hpp  data_types.hpp  datatypes.hpp  device.hpp  device_datatypes.hpp  float1.hpp  float4.hpp  font.hpp  host_datatypes.hpp  hud.hpp  imgui.hpp  index.hpp  info.hpp  int1.hpp  int4.hpp  interop.hpp  interoperability.hpp  kernel.hpp  linalg.hpp  linear_algebra.hpp  link.hpp  logfile.hpp  memory_orb.hpp  mesh.hpp  neutrino.hpp  node.hpp  nu.hpp  opencl.hpp  openclgl.hpp  opengl.hpp  path.hpp  platform.hpp  point4.hpp  (+9 more)
Code/kernel/: client_datatypes.cl  datatypes.cl  sine_kernel.cl  thekernel.cl
Code/shader/: fragment.frag  geometry.geom  point_fragment.frag  point_geometry.geom  point_vertex.vert  shaded_fragment.frag  shaded_geometry.geom  shaded_vertex.vert  text_fragment.frag  text_vertex.vert  vertex.txt  vertex.vert  voxel.frag  voxel.geom  voxel.vert  voxel_fragment.frag  voxel_geometry.geom  voxel_vertex.vert  wireframe_geometry.geom  wireframe_vertex.vert
Code/src/: algebraic_topology.cpp  baseline.cpp  bond.cpp  color4.cpp  context.cpp  data.cpp  data_classes.cpp  data_types.cpp  datatypes.cpp  device.cpp  float1.cpp  float4.cpp  font.cpp  glad.c  host_datatypes.cpp  hud.cpp  imgui.cpp  index.cpp  info.cpp  int1.cpp  int4.cpp  interop.cpp  interoperability.cpp  kernel.cpp  linalg.cpp  linear_algebra.cpp  link.cpp  logfile.cpp  main.cpp  memory_orb.cpp  mesh.cpp  neutrino.cpp  node.cpp  opencl.cpp  openclgl.cpp  opengl.cpp  path.cpp  platform.cpp  point4.cpp  program.cpp  (+8 more)
Code/uncrustify/: README.md  README.txt  uncrustify.cfg
Docs/: Documentation.md  Doxyfile.in  footer.html  header.html  index.html  main_page.md  neutrino_doc.md  opencl.md  openclgl.md  opengl.md  test.adoc  theory.md
Docs/Doxygen/html/: annotated.html  annotated_dup.js  classcolor4-members.html  classcolor4.html  classcolor4.js  classes.html  classfloat4-members.html  classfloat4.html  classfloat4.js  classint4-members.html  classint4.html  classint4.js  classpoint4-members.html  classpoint4.html  classpoint4.js  classtext4-members.html  classtext4.html  classtext4.js  context_8cpp.html  context_8cpp.js  context_8hpp.html  context_8hpp.js  context_8hpp_source.html  data_8hpp_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doc.html  files.html  font_8hpp_source.html  git_theory.html  git_tips.html  globals.html  globals_func.html  index.html  interoperability_8hpp_source.html  linear__algebra_8hpp_source.html  md___users__erik__documents__p_r_o_j_e_c_t_s__bookhouse_boys_ezor__neutrino__docs__documentation.html  md___users__erik__documents__p_r_o_j_e_c_t_s__bookhouse_boys_ezor__neutrino__docs_main_page.html  (+13 more)
Docs/Doxygen/html/search/: all_0.js  all_1.js  all_3.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  functions_0.js  functions_1.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  searchdata.js
Docs/Doxygen/latex/: annotated.tex  classcolor4.tex  classfloat4.tex  classint4.tex  classpoint4.tex  classtext4.tex  context_8cpp.tex  context_8hpp.tex  doc.tex  files.tex  index.tex  md___users__erik__documents__p_r_o_j_e_c_t_s__bookhouse_boys_ezor__neutrino__docs__documentation.tex  md___users__erik__documents__p_r_o_j_e_c_t_s__bookhouse_boys_ezor__neutrino__docs_main_page.tex  md___users__erik__documents__p_r_o_j_e_c_t_s__bookhouse_boys_ezor__neutrino__docs_opencl.tex  md___users__erik__documents__p_r_o_j_e_c_t_s__bookhouse_boys_ezor__neutrino__docs_opengl.tex  opencl.tex  refman.tex
Docs/Doxygen/rtf/: refman.rtf
Installation/Linux/: installation_linux.md
Installation/Mac/: installation_mac.md
Installation/Windows/: installation_windows.md
Tests/: test_log.md
cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
include/: context.hpp  data.hpp  interop.hpp  opencl.hpp  opengl.hpp  program.hpp  utils.hpp
kernel/: kernel.txt  thekernel.txt
shader/: fragment.txt  vertex.txt
src/: ._main.cpp  context.cpp  data.cpp  interop.cpp  main.cpp  opencl.cpp  opengl.cpp  program.cpp  utils.cpp
